# knight-agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SRS.md
.claude/: settings.local.json
docs/: 00-priority-overview.md  01-requirements-analysis.md  02-system-design.md  04-agent-variants.md  04-testing-design.md  05-session-system.md  05-technical-baseline-tests.md
docs/03-module-design/: README.md
docs/03-module-design/agent/: agent-runtime.md  agent-variants.md  external-agent.md  skill-engine.md  task-manager.md  workflows-directory.md
docs/03-module-design/cli/: cli.md  tui.md
docs/03-module-design/configuration/: configuration.md
docs/03-module-design/core/: bootstrap.md  command.md  event-loop.md  hook-engine.md  monitor.md  orchestrator.md  router.md  session-manager.md
docs/03-module-design/infrastructure/: ipc-contract.md
docs/03-module-design/security/: sandbox.md  security-manager.md
docs/03-module-design/services/: context-compressor.md  llm-provider.md  logging-system.md  mcp-client.md  report-skill.md  storage-service.md  timer-system.md
docs/03-module-design/tools/: tool-system.md
mcp/: package.json
mcp/src/: index.ts
rust/agent/agent-runtime/: Cargo.toml  README.md
rust/agent/agent-runtime/src/: lib.rs  runtime.rs  types.rs
rust/agent/agent-runtime/tests/: agent_runtime_tests.rs
rust/agent/agent-variants/: Cargo.toml  README.md
rust/agent/agent-variants/src/: lib.rs  registry.rs  types.rs
rust/agent/agent-variants/tests/: agent_variants_tests.rs
rust/agent/external-agent/: Cargo.toml  README.md
rust/agent/external-agent/src/: lib.rs  manager.rs  types.rs
rust/agent/external-agent/tests/: external_agent_tests.rs
rust/agent/skill-engine/: Cargo.toml  README.md
rust/agent/skill-engine/src/: lib.rs  manager.rs  types.rs
rust/agent/skill-engine/tests/: skill_engine_tests.rs
rust/agent/task-manager/: Cargo.toml  README.md
rust/agent/task-manager/src/: lib.rs  manager.rs  types.rs
rust/agent/task-manager/tests/: task_manager_tests.rs
rust/agent/workflows-directory/: Cargo.toml  README.md
rust/agent/workflows-directory/src/: lib.rs  manager.rs  parser.rs  types.rs
rust/agent/workflows-directory/tests/: workflows_directory_tests.rs
rust/cli/: Cargo.toml
rust/cli/src/: cli_impl.rs  error.rs  lib.rs  repl.rs  trait.rs  types.rs
rust/cli/tests/: cli_tests.rs
rust/configuration/: Cargo.toml  README.md
rust/configuration/src/: lib.rs  loader.rs  types.rs
rust/core/agent-proxy/: Cargo.toml
rust/core/agent-proxy/src/: lib.rs
rust/core/bootstrap/: Cargo.toml  README.md
rust/core/bootstrap/src/: error.rs  lib.rs  system.rs  types.rs
rust/core/bootstrap/tests/: bootstrap_tests.rs
rust/core/command/: Cargo.toml  README.md
rust/core/command/src/: lib.rs  manager.rs  parser.rs  types.rs
rust/core/command/tests/: command_tests.rs
rust/core/event-loop/: Cargo.toml  README.md
rust/core/event-loop/src/: dispatcher.rs  event_loop.rs  lib.rs  queue.rs  scheduler.rs  types.rs
rust/core/event-loop/tests/: event_loop_tests.rs
rust/core/hook-engine/: Cargo.toml  README.md
rust/core/hook-engine/src/: executor.rs  lib.rs  registry.rs  types.rs
rust/core/hook-engine/tests/: hook_engine_tests.rs
rust/core/monitor/: Cargo.toml  README.md
rust/core/monitor/src/: lib.rs  monitor.rs  types.rs
rust/core/monitor/tests/: monitor_tests.rs
rust/core/orchestrator/: Cargo.toml  README.md
rust/core/orchestrator/src/: lib.rs  manager.rs  types.rs
rust/core/orchestrator/tests/: orchestrator_tests.rs
rust/core/router/: Cargo.toml  README.md
rust/core/router/src/: lib.rs  router.rs  types.rs
rust/core/router/tests/: router_tests.rs
rust/core/session-manager/: Cargo.toml  README.md
rust/core/session-manager/src/: lib.rs  manager.rs  types.rs
rust/core/session-manager/tests/: session_manager_tests.rs
rust/entrance/: Cargo.toml
rust/entrance/src/: args.rs  daemon.rs  daemon_manager.rs  in_process.rs  main.rs  session.rs
rust/infrastructure/ipc-contract/: Cargo.toml  README.md
rust/infrastructure/ipc-contract/src/: client.rs  codec.rs  contract.rs  dispatch.rs  error.rs  implementation.rs  lib.rs  registry.rs  server.rs  transport.rs  types.rs
rust/infrastructure/ipc-contract/tests/: ipc_contract_tests.rs
rust/knight-agent/: Cargo.toml
rust/knight-agent/src/: main.rs
rust/knight-config/: Cargo.toml  README.md
rust/knight-config/src/: error.rs  lib.rs  loader.rs  types.rs
rust/security/sandbox/: Cargo.toml  README.md
rust/security/sandbox/src/: checker.rs  error.rs  (+4 more)
rust/security/security-manager/: Cargo.toml  README.md
rust/security/security-manager/src/: audit.rs  lib.rs  policy.rs  secrets.rs  system.rs  types.rs
rust/security/security-manager/tests/: security_manager_tests.rs
rust/services/context-compressor/: Cargo.toml  README.md
rust/services/llm-provider/: Cargo.toml  README.md
rust/services/llm-provider/src/: lib.rs  llm_trait.rs  router.rs  types.rs
rust/services/llm-provider/src/provider/: anthropic.rs  generic.rs  mod.rs  openai.rs
rust/services/llm-provider/tests/: llm_integration_test.rs  llm_provider_tests.rs  serialization_test.rs  streaming_test.rs  verify_request_format.rs
rust/services/logging-system/: Cargo.toml  README.md
rust/services/logging-system/src/: init.rs  lib.rs  output.rs  system.rs  types.rs
rust/services/logging-system/tests/: logging_system_tests.rs
rust/services/permission-service/: Cargo.toml  README.md
rust/services/report-skill/: Cargo.toml  README.md
rust/services/storage-service/: Cargo.toml  README.md
rust/services/timer-system/: Cargo.toml  README.md
rust/src/: agent.rs  core.rs  infrastructure.rs  lib.rs  security.rs  services.rs  tool_system.rs
rust/tool-system/tool-system/: Cargo.toml  README.md
rust/tui/: Cargo.toml
rust/tui/src/: app.rs  client.rs  event.rs  layout.rs  lib.rs  renderer.rs  state.rs  test_harness.rs
rust/tui/src/client/: ipc.rs
rust/tui/src/widgets/: header.rs  input.rs  main_output.rs  markdown.rs  mod.rs  session_popup.rs  status.rs  task_popup.rs
rust/tui/tests/: tui_test.rs
(+35 files in other folders)
