[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures = "0.3"
llm-provider = { path = "../../services/llm-provider" }
agent-proxy = { path = "../../core/agent-proxy" }
